--- a/ABench/ABench.vcxproj.filters
+++ b/ABench/ABench.vcxproj.filters
@@ -10,6 +10,9 @@
     <Filter Include="Math">
       <UniqueIdentifier>{2110b703-bd35-4cb5-b400-78e3caa79a8a}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Scene">
+      <UniqueIdentifier>{8c636787-4a62-4303-b10f-d68f25582ee7}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Common\Window.cpp">
@@ -82,6 +85,12 @@
     </ClCompile>
     <ClCompile Include="Common\Timer.cpp">
       <Filter>Common</Filter>
+    </ClCompile>
+    <ClCompile Include="Scene\Camera.cpp">
+      <Filter>Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="Scene\Object.cpp">
+      <Filter>Scene</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -160,6 +169,12 @@
     </ClInclude>
     <ClInclude Include="Common\Timer.hpp">
       <Filter>Common</Filter>
+    </ClInclude>
+    <ClInclude Include="Scene\Camera.hpp">
+      <Filter>Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="Scene\Object.hpp">
+      <Filter>Scene</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
